--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit>=1.35.0
+streamlit
 pandas
-numpy
 yfinance
 plotly
+beautifulsoup4
+requests
 xlsxwriter
 extra-streamlit-components
 openpyxl
