--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-streamlit
-pandas
-numpy
-yfinance
-plotly
-beautifulsoup4
-requests
-lxml
-xlsxwriter
-extra-streamlit-components
-openpyxl
-bcrypt
-watchdog
-psycopg2-binary
+streamlit==1.41.0
+pandas==2.1.4
+numpy==1.26.3
+yfinance==0.2.36
+plotly==5.18.0
+psycopg2-binary==2.9.9
+bcrypt==4.1.2
+extra-streamlit-components==0.1.71
+openpyxl==3.1.2
+requests==2.31.0
+beautifulsoup4==4.12.3
+lxml==5.1.0
