--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas==2.1.4
-numpy==1.26.3
+streamlit==1.32.0
+pandas==2.2.2
+numpy==1.26.4
 yfinance==0.2.36
-plotly==5.18.0
+plotly==5.19.0
 psycopg2-binary==2.9.9
 bcrypt==4.1.2
 extra-streamlit-components==0.1.71
