--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
 # .streamlit/secrets.toml
-DATABASE_URL = "postgres://user:password@host:port/database_name"
+DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:[Tm1074844687]@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres"
