--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,3 @@
 # .streamlit/secrets.toml
-DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres"
-
+DATABASE_URL = "postgresql://postgres:[Tm1074844687]@db.uxcdbjqnbphlzftpfajm.supabase.co:5432/postgres"
 
