--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,2 @@
 # .streamlit/secrets.toml
-DATABASE_URL = "postgresql://postgres:[Tm1074844687]@db.uxcdbjqnbphlzftpfajm.supabase.co:5432/postgres"
-
+DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@db.uxcdbjqnbphlzftpfajm.supabase.co:5432/postgres?sslmode=require"
