--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-streamlit==1.32.0
-pandas==2.2.2
-numpy==1.26.4
-plotly==5.19.0
-psycopg2-binary==2.9.9
-bcrypt==4.1.2
-extra-streamlit-components==0.1.71
-openpyxl==3.1.2
-requests==2.31.0
-beautifulsoup4==4.12.3
-lxml==5.1.0
-pdfplumber==0.11.0
+streamlit
+pandas
+numpy
+plotly
+psycopg2-binary
+bcrypt
+extra-streamlit-components
+openpyxl
+requests
+beautifulsoup4
 xlsxwriter
-SQLAlchemy==2.0.28
