--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 # .streamlit/secrets.toml
 # استبدل YOUR_REAL_PASSWORD بكلمة مرورك الحقيقية (بدون أقواس)
-DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tn1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?sslmode=require"
+DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?sslmode=require"
