--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,8 @@
 # .streamlit/secrets.toml
 # استبدل YOUR_REAL_PASSWORD بكلمة مرورك الحقيقية (بدون أقواس)
-DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?sslmode=require"
+#DATABASE_URL = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?sslmode=require"
+
+url = "postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?sslmode=require"
 #DATABASE_URL ="postgresql://postgres:Tm1074844687@db.uxcdbjqnbphlzftpfajm.supabase.co:5432/postgres"
 #DATABASE_URL ="postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres"
 #DATABASE_URL ="postgresql://postgres.uxcdbjqnbphlzftpfajm:Tm1074844687@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres"
