--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,8 +7,5 @@ font = "sans serif"
 
 [server]
 headless = true
-enableCORS = false
-enableXsrfProtection = false
-
-[layout]
-wideMode = true
+enableCORS = true
+enableXsrfProtection = true
