--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,9 @@ bcrypt
 extra-streamlit-components
 openpyxl
 requests
-beautifulsoup
+beautifulsoup4
 lxml
 pdfplumber
 xlsxwriter
 SQLAlchemy
 yfinance
-
